double scrollbars fix;
closes #128

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2137,6 +2137,11 @@ body.adding-doubled-section .doubled-section-parent {
   transform: translateX(-100%);
 }
 
+#customize-theme-controls .customize-pane-child.accordion-section-content,
+#customize-theme-controls .customize-pane-child.accordion-sub-container {
+  overflow: hidden !important;
+}
+
 .epsilon-hidden {
   opacity: 0;
   visibility: hidden;
